Design tweeks plus fixed z-index for dropdown menu and faded BG

--- a/KEA-prototype.css
+++ b/KEA-prototype.css
@@ -160,6 +160,16 @@ header {
     left: 20px;
 }
 
+.bgblur {
+    position: absolute;
+    z-index: -1;
+    top: 60px;
+    background-color: black;
+    opacity: .4;
+    height: 100vh;
+    width: 100%;
+}
+
 #menubtn {
     position: absolute;
     right: 20px;
@@ -525,13 +535,13 @@ header {
 
 .folderhd {
     padding: 1rem;
-    font-weight: bold;
+    font-weight:bolder;
     border: 0px;
     margin: 0;
 }
 
 .folderp {
-    padding: 1rem;
+    padding-top: 1rem;
     border: 0px;
     margin: auto;
     width: 100%;
@@ -545,16 +555,18 @@ header {
     color: #3B3B3B;
     font-size: 1.5rem;
     text-align: center;
+    font-weight: 600;
 }
 
 .tmfolder {
+    position: relative;
+    z-index: -2;
     margin: 0;
     width: 100%;
     height: 60px;
     background-color: #BBD4DB;
     color: #3B3B3B;
     font-size: 1.3rem;
-    text-align: center;
     border: .1px solid #ededed;
 }
 
@@ -566,16 +578,18 @@ header {
     color: #3B3B3B;
     font-size: 1.5rem;
     text-align: center;
+    font-weight: 600;
 }
 
 .exercisefolder {
+     position: relative;
+    z-index: -2;
     margin: 0;
     width: 100%;
     height: 60px;
     background-color: #E5B7B7;
     color: #3B3B3B;
     font-size: 1.3rem;
-    text-align: center;
     border: .1px solid #ededed;
 }
 
@@ -588,11 +602,12 @@ header {
 
 .arrow {
     position: relative;
-    top: -55px;
+    top: -35px;
     left: 40%;
     margin-top: 10px;
     margin-right: 20px;
-    height: 30px;
+    height: 20px;
+    z-index: 1;
 }
 
 .arrowspin {
